--- a/bcmweb/src/index.html
+++ b/bcmweb/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ORM</title>
-  <base href="/orm/">
-  <!-- <base href="http://risktracdev.secureyes.net:5000/orm/"> -->
+  <title>BCM</title>
+  <base href="/bcm/">
+  <!-- <base href="http://risktracdev.secureyes.net:5000/bcm/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css"> -->
